# mofbatteryML

./: .gitignore  README.md  environment.yml  pyproject.toml
mofbatteryML/: compute_sp.py
mofbatteryML/cli/: create_complexes_from_file.py  create_complexes_from_folder.py
mofbatteryML/data/metal_atoms/: Al_atom.xyz  Ca_atom.xyz  K_atom.xyz  Li_atom.xyz  Mg_atom.xyz  Na_atom.xyz
mofbatteryML/energy/: compute_sp.py  docker.py
mofbatteryML/io/: coords_library.py  filetyper.py
mofbatteryML/setter/: create_complexes_from_ase_atoms.py  create_complexes_from_folder.py
mofbatteryml/codes/: compute_complexes.py  create_batches.py  select_cif.py
mofbatteryml/codes/Results_folder/complexes/: ABAGAO.json  ABALOF.json
mofbatteryml/energy/: compute_sp.py  docker.py
mofbatteryml/setter/: create_complexes_from_ase_atoms.py  create_complexes_from_folder.py
