[tool.poetry]
name = "mofbatteryml"
version = "0.1.0"
description = "A python package to predict MOFs with the potentials for battery application"
authors = ["Dinga Wonanke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
requests = "^2.31.0"

[tool.poetry.scripts]
dock_folder ="mofbatteryml.setter.create_complexes_from_folder:main"
dock_structure ="mofbatteryml.setter.create_complexes_from_folder:main2"
dock_from_ase="mofbatteryml.setter.create_complexes_from_ase_atoms:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
